convert to new expression switches